--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -4,13 +4,13 @@
   <div class="col-4">
     <div class="card article" style="width: 24rem;">
       <div class="card-header">
-        <h4>in JAPAN</h4>
+        <h4>from <%= @article.source %></h4>
       </div>
       <div class="card-body">
         <h5 class="card-title"><%= @article.title %></h5>
         <h6 class="card-subtitle mb-2 text-muted"><%= @article.date %></h6>
         <p class="card-text"><%= @article.content %></p>
-        <a href="#" class="card-link">Card link</a>
+        <%= link_to 'Read this', @article.url, class: "btn btn-primary" %>
         <a href="#" class="card-link">Another link</a>
       </div>
     </div>
