link is opend with new tab

--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -8,10 +8,11 @@
           <h4>from <%= article.source %></h4>
         </div>
         <div class="card-body">
+          <img src="..." class="rounded float-right" alt="...">
           <h5 class="card-title"><%= article.title %></h5>
           <h6 class="card-subtitle mb-2 text-muted"><%= article.date %></h6>
           <p class="card-text"><%= article.content %></p>
-          <%= link_to 'Read this', article.url, class: "btn btn-primary" %>
+          <%= link_to 'Read this', article.url, class: "btn btn-primary", target: :_blank %>
           <a href="#" class="card-link">Another link</a>
         </div>
       </div>
