Add article partial

--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -2,41 +2,13 @@
 
 <div class="row">
   <% @top_articles[0..2].each do |article| %>
-    <div class="col-4">
-      <div class="card article" style="width: 24rem;">
-        <div class="card-header">
-          <h4>from <%= article.source %></h4>
-        </div>
-        <div class="card-body">
-          <h5 class="card-title"><%= article.title %></h5>
-          <h6 class="card-subtitle mb-2 text-muted"><%= article.date %></h6>
-          <img src="<%= article.img %>" width="150" height=auto class="rounded float-right" alt="">
-          <p class="card-text"><%= article.content %></p>
-          <%= link_to 'Read this', article.url, class: "btn btn-primary", target: :_blank %>
-          <a href="#" class="card-link">Another link</a>
-        </div>
-      </div>
-    </div>
+    <%= render partial: 'article', locals: {article: article} %>
   <% end %>
 </div>
 
 <div class="row">
   <% @top_articles[3..5].each do |article| %>
-    <div class="col-4">
-      <div class="card article" style="width: 24rem;">
-        <div class="card-header">
-          <h4>from <%= article.source %></h4>
-        </div>
-        <div class="card-body">
-          <h5 class="card-title"><%= article.title %></h5>
-          <h6 class="card-subtitle mb-2 text-muted"><%= article.date %></h6>
-          <img src="<%= article.img %>" width="150" height=auto class="rounded float-right" alt="">
-          <p class="card-text"><%= article.content %></p>
-          <%= link_to 'Read this', article.url, class: "btn btn-primary" %>
-          <a href="#" class="card-link">Another link</a>
-        </div>
-      </div>
-    </div>
+    <%= render partial: 'article', locals: {article: article} %>
   <% end %>
 </div>
 
